# final-class

./: .travis.yml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  final_class.py  pyproject.toml  setup.cfg
.github/: dependabot.yml
.github/workflows/: test.yml
final_class/: __init__.py  __init__.pyi  final_class.py
tests/: conftest.py  test_basic.py  test_init_subclass.py  test_subclassing.py
typesafety/: test_final_class.yml
