[tool.nitpick]
style = "https://raw.githubusercontent.com/wemake-services/wemake-python-styleguide/master/styles/nitpick-style-wemake.toml"


[tool.poetry]
name = "final-class"
version = "0.2.0"
description = "Final classes for Python 3"
authors = ["sobolevn <mail@sobolevn.me>"]
license = "MIT"

readme = "README.md"

repository = "https://github.com/moscow-python-beer/final-class"
homepage = "https://github.com/moscow-python-beer/final-class"

keywords = [
    "oop",
    "oop-principles",
    "final-classes",
    "wemake.services",
    "final",
    "final classes",
    "typing"
]

[tool.poetry.dependencies]
python = "^3.6"

typing_extensions = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^5.4"
pytest-randomly = "^3.4"
pytest-cov = "^2.9"
pytest-mypy-plugins = "^1.3"

wemake-python-styleguide = "^0.14"
flake8-pytest = "^1.3"
flake8-pytest-style = "^1.1.1"
flake8-pyi = "^20.5"
nitpick = "^0.22.2"

mypy = "^0.780"
safety = "^1.9"


[build-system]
requires = ["poetry>=1.0"]
build-backend = "poetry.masonry.api"
