[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.nitpick]
style = "https://raw.githubusercontent.com/wemake-services/wemake-python-styleguide/master/styles/nitpick-style-wemake.toml"


[tool.poetry]
name = "final-class"
version = "0.2.0"
description = "Final classes for Python 3"
authors = ["sobolevn <mail@sobolevn.me>"]
license = "MIT"

readme = "README.md"

repository = "https://github.com/moscow-python-beer/final-class"
homepage = "https://github.com/moscow-python-beer/final-class"

keywords = [
    "oop",
    "oop-principles",
    "final-classes",
    "wemake.services",
    "final",
    "final classes",
    "typing"
]

[tool.poetry.dependencies]
python = "^3.6"

typing_extensions = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^6.2"
pytest-randomly = "^3.8"
pytest-cov = "^2.12"
pytest-mypy-plugins = "^1.7"

wemake-python-styleguide = "^0.15"
flake8-pytest-style = "^1.5"
flake8-pyi = "^20.10"
nitpick = "^0.27"

mypy = "^0.910"
safety = "^1.10"
